syntax = "proto3";

package api.account.v1;

import "google/api/annotations.proto";

option go_package = "account/api/account/v1;v1";
option java_multiple_files = true;
option java_package = "api.account.v1";

service Account {
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/account/v1/login"
      body: "*"
    };
  }
  rpc Register (RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/account/v1/register"
      body: "*"
    };
  }
}

message LoginRequest {
  // user account, like username, email, phone number
  string account = 1;
  // bcrypt(password+"piggytalk")
  string password = 2;
}

message LoginReply {
  string token = 1;
}

message RegisterRequest {
  string username = 1;
  // same as login request
  string password = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
}

message RegisterReply {
  string token = 1;
}